--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#64B5F6</color>
+    <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="light_gray">#E0E0E0</color>
 </resources>
