--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,10 @@
 <resources>
     <color name="colorPrimary">#64B5F6</color>
     <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#64B5F6</color>
     <color name="light_gray">#E0E0E0</color>
     <color name="gray">#9E9E9E</color>
     <color name="gray_nav">#4a4a4a</color>
     <color name="blue_nav">#0190cf</color>
+    <color name="blue_btn">#47CBFC</color>
 </resources>
