Profile tested and completed

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -69,7 +69,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/light_gray"
-            android:text="My Offers"
+            android:text="My Books"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
