--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="gray_nav">#4a4a4a</color>
     <color name="blue_nav">#0190cf</color>
     <color name="blue_btn">#47CBFC</color>
+    <color name="dark_gray">#424242</color>
 </resources>
